manifests/monitoring/vmagent.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmagent
  namespace: monitoring
  labels:
    app.kubernetes.io/name: victoria-metrics
    app.kubernetes.io/component: agent
  annotations:
    configmap.reloader.stakater.com/reload: "vmagent"
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: victoria-metrics
      app.kubernetes.io/component: agent
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: victoria-metrics
        app.kubernetes.io/component: agent
    spec:
      priorityClassName: system-cluster-critical
      serviceAccountName: prometheus-server
      containers:
        - name: vmagent
          image: "victoriametrics/vmagent:v1.152.0"
          imagePullPolicy: "IfNotPresent"
          args:
            - -remoteWrite.url=http://vmcluster.auth-proxy.svc/insert/0/prometheus/
            - -remoteWrite.showURL
            - -promscrape.config=/config/prometheus.yml
            - -promscrape.suppressDuplicateScrapeTargetErrors
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: vmagent
---
