manifests/monitoring/ephemeral-storage-exporter.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-ephemeral-storage-metrics
  namespace: monitoring
  labels:
    app.kubernetes.io/name: k8s-ephemeral-storage-metrics
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9100"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: k8s-ephemeral-storage-metrics
  ports:
    - name: metrics
      port: 9100
      protocol: TCP
      targetPort: metrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-ephemeral-storage-metrics
  namespace: monitoring
  labels:
    app.kubernetes.io/name: k8s-ephemeral-storage-metrics
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-ephemeral-storage-metrics
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-ephemeral-storage-metrics
    spec:
      serviceAccountName: k8s-ephemeral-storage-metrics
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: metrics
          image: ghcr.io/jmcgrath207/k8s-ephemeral-storage-metrics:1.21.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 9100
              protocol: TCP
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /metrics
              port: 9100
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /metrics
              port: 9100
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
